--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: helvetica;
-  background-color: #2e2e2e;
+  background-color: #111a27;
   color: white;
   margin: 0;
   margin-top: 50px;
@@ -11,8 +11,8 @@ body {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 999;
-    background-color: #1f1f1f;
+    z-index: 1;
+    background-color: #222330;
     box-shadow: 0 0 3px rgb(255 255 255 / 25%);
     width: 100%;
     height: 30px;
@@ -52,7 +52,7 @@ body {
 .banner {
   background-color: #fff;
   color: black;
-  padding: 5px;
+  padding: 15px;
 }
 
 .banner > span {
@@ -70,15 +70,30 @@ body {
   font-size: 30px;
 }
 
-button {
+textarea {
+  outline: none;
   background-color: #f5f5f5;
   border: 0;
   border-radius: 8px;
+  color: #333333;
+  padding: 10px 12px;
+  resize: none;
+}
+
+button {
+  background-color: #f5f5f5;
+  border: 0;
+  border-radius: 20px;
   color: #333333;
   cursor: pointer;
   padding: 10px 12px;
   text-align: center;
   margin-top:5px;
+}
+
+.highlightedButton {
+    background-color: #2dc9ff;
+    color: white;
 }
 
 .loader {
@@ -124,4 +139,83 @@ input {
   margin-top: 5px;
   outline: none;
 }
+
+.post-button {
+  align-items: center;
+  background-color: white;
+  color: black;
+  border-radius: 100px;
+  width: 10px;
+  height: 10px;
+  padding: 30px;
+  font-size: 35px;
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  cursor: pointer;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 2;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 50px 30px 0px 30px;
+  border: 1px solid #888;
+  width: 80%;
+  border-radius: 20px;
+  position: relative;
+  color: black;
+}
+
+#modal-header {
+	position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  padding: 15px;
+  background-color: #2dc9ff;
+  color: white;
+  font-size: 20px;
+  border-radius: 20px 20px 0 0;
+}
+
+.hiddenModButton, .likeButton {
+  text-decoration: underline;
+  color: grey;
+  font-style: italic;
+  font-size: 12px;
+  cursor: pointer;
+}
+
+.hiddenModButton {
+  display: none;
+}
+
+.post {
+  background-color: rgba(31, 41, 55, 1);
+  color: white;
+  border-radius: 20px;
+  padding: 15px;
+  width: 40%;
+  display: inline-block;
+  text-align: left;
+  border: 3px solid rgb(37 47 61);
+}
+
+a {
+  color: white;
 }
