--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ body {
 
 #pageContent {
   text-align: center;
-  padding: 130px;
+  padding: 30px;
   padding-top: 60px;
 }
 
@@ -171,14 +171,13 @@ input {
 }
 
 .modal-content {
-  background-color: #fefefe;
+  background-color: #222330;
   margin: auto;
   padding: 50px 30px 0px 30px;
   border: 1px solid #888;
   width: 80%;
   border-radius: 20px;
   position: relative;
-  color: black;
 }
 
 #modal-header {
@@ -210,7 +209,7 @@ input {
   color: white;
   border-radius: 20px;
   padding: 15px;
-  width: 40%;
+  width: 60%;
   display: inline-block;
   text-align: left;
   border: 3px solid rgb(37 47 61);
@@ -218,4 +217,10 @@ input {
 
 a {
   color: white;
+}
+
+#version {
+  position: fixed;
+  bottom: 7px;
+  left: 7px;
 }
