beta 1.5 mostly untested

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
   margin: 0;
   margin-top: 50px;
   background-attachment: fixed;
+  background-image: url(https://u.cubeupload.com/lankysback/AO6OiZ.png);
 }
 
 #navbar {
